# rossmann

./: .gitignore  README.md  pyproject.toml
api/: handler.py
api/rossmann/: Rossmann.py
ds-producao/: store-sales-prediction.ipynb
parameter/: competition_time_month_scaler.pkl  year_scaler.pkl
webapp/: handler.py  requirements.txt
webapp/parameter/: promo_time_week_scaler.pkl
webapp/rossmann/: Rossmann.py
