[tool.poetry]
name = "ds-producao"
version = "0.1.0"
description = ""
authors = ["Rafael Silva <teixeirarafa10@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
inflection = "^0.5.1"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
boruta = "^0.3"
xgboost = "^2.0.3"
flask = "^3.0.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
